syntax = "proto3";

package ci.tasklet.registry.demo.picklock;

import "tasklet/api/tasklet.proto";
import "tasklet/services/ci/proto/ci.proto";
import "tasklet/services/yav/proto/yav.proto";
import "ci/tasklet/common/proto/service.proto";

message Input {
    ci.TaskletContext context = 1;
    YavFilter yav_filter = 2;
}

message YavFilter {
    repeated string keys = 1;
}

message Output {
    repeated VaultValue values = 1;
}

message VaultValue {
    string key = 1;
    string value = 2;
}

message Context {
    option (.tasklet.context) = true;

    ci.CiService ci = 1 [(.tasklet.inject) = true];
    yav_service.YavService yav = 2 [(.tasklet.inject) = true];
}

message Picklock {
    option (.tasklet.tasklet_interface) = true;

    Context ctx = 1;
    Input input = 2 [(.tasklet.input) = true];
    Output output = 3 [(.tasklet.output) = true];
}
